--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
