--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@types/date-fns": "^2.6.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-infinite-scroll-component": "^5.0.0",
+    "@types/react-scroll": "^1.8.10",
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
@@ -36,6 +41,9 @@
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-infinite-scroll-hook": "^5.0.1",
+    "react-scroll": "^1.9.0",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.0",
     "swr": "^2.2.5",
