--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:android": "next build && npx cap add android && npx cap sync"
   },
   "dependencies": {
     "@capacitor/android": "^6.1.2",
@@ -25,6 +26,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@types/date-fns": "^2.6.3",
+    "@types/luxon": "^3.4.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-infinite-scroll-component": "^5.0.0",
@@ -35,10 +37,10 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.456.0",
+    "luxon": "^3.5.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
-    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-infinite-scroll-component": "^6.1.0",
@@ -57,6 +59,7 @@
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-preprocessor-loader": "^1.3.0"
   }
 }
