--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.2",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
@@ -31,21 +32,24 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-infinite-scroll-component": "^5.0.0",
     "@types/react-scroll": "^1.8.10",
+    "@types/recharts": "^1.8.29",
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "lucide-react": "^0.456.0",
+    "lucide-react": "^0.460.0",
     "luxon": "^3.5.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroll-hook": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "recharts": "^2.13.3",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.0",
     "swr": "^2.2.5",
