--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@capacitor/android": "^6.1.2",
     "@capacitor/ios": "^6.1.2",
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/react-popover": "^1.1.2",
@@ -27,6 +29,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@tanstack/react-table": "^8.20.5",
     "@types/date-fns": "^2.6.3",
     "@types/luxon": "^3.4.2",
     "@types/react": "^18.3.12",
