--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^6.1.2",
+    "@capacitor/core": "^6.2.0",
     "@capacitor/ios": "^6.1.2",
     "@capacitor/status-bar": "^6.0.2",
     "@hookform/resolvers": "^3.9.1",
